<resources>
    <string name="main_name">plugin.main</string>
    <string name="main_menu_main">首页</string>
    <string name="main_menu_discovery">发现</string>
    <string name="main_menu_user">我的</string>

    <string name="main_fragment_welcome">欢迎来到Main模块首页</string>
    <string name="main_fragment_login">拦截登录(打开User模块登录页)</string>
    <string name="main_fragment_pattern_lock">拦截手势密码</string>
    <string name="main_fragment_invoke_scanner">调起Scanner远程模块方法</string>
    <string name="main_fragment_init_accessibility">检测GAEA辅助权限</string>
    <string name="main_fragment_load_patch">加载TPatch(重启后生效)</string>
    <string name="main_fragment_uninstall_scanner">卸载Scanner模块</string>

    <string name="main_fragment_discover_welcome">欢迎来到Main模块发现页</string>
    <string name="main_fragment_scan">打开扫描(打开Scanner模块扫描页)</string>

</resources>
