<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_small"
            android:text="@string/main_fragment_welcome" />

        <TextView
            android:id="@+id/tvLoginStatus"
            style="@style/text_small" />

    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_login" />

    <Button
        android:id="@+id/btnPatternLock"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_pattern_lock" />

    <Button
        android:id="@+id/btnInvokeScanner"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_invoke_scanner" />

    <Button
        android:id="@+id/btnInitAccessibility"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_init_accessibility" />

    <Button
        android:id="@+id/btnLoadPatch"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_load_patch" />

    <Button
        android:id="@+id/btnUninstallScanner"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_fragment_uninstall_scanner" />

</LinearLayout>
